test: CartServiceTest updated