@@ -1,6 +1,7 @@
 package com.example.carrinhopetshop.service.Implementation;
 
 import com.example.carrinhopetshop.dto.cart.CartRequest;
+import com.example.carrinhopetshop.dto.cart.CartResponse;
 import com.example.carrinhopetshop.model.Cart;
 import com.example.carrinhopetshop.model.CartItem;
 import com.example.carrinhopetshop.model.Category;
@@ -24,12 +25,14 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
@@ -60,6 +63,7 @@ class CartServiceTest {
     private static CartRequest cartRequest;
     private static Cart cart;
     private static CartItem item;
+    private static BigDecimal totalValue;
 
     @BeforeAll
     static void init() {
@@ -69,100 +73,109 @@ class CartServiceTest {
         cartRequest = new CartRequest(2, product, client);
         cart = new Cart(new BigDecimal("19.90"), client);
         item = new CartItem(cartRequest, cart);
+        totalValue = product.getPrice().multiply(new BigDecimal(cartRequest.quantity()));
     }
 
     @Test
-    void itShouldReturnACartResponseWhenCreateACartWithAnItem() {
-        BigDecimal totalValue = product.getPrice().multiply(new BigDecimal(cartRequest.quantity()));
+    void shouldReturnACartResponseWhenCreateACartWithAnItem() {
         Cart savedCart = new Cart(1L, totalValue, client, new ArrayList<>());
         when(cartRepository.save(cartCaptor.capture())).thenReturn(savedCart);
 
         var response = cartService.createCart(cartRequest);
 
-        verify(cartRepository, times((1))).save(cartCaptor.capture());
-        verify(cartItemService, times(1)).save(itemCaptor.capture());
+        then(cartRepository).should().save(cartCaptor.capture());
+        then(cartItemService).should().save(itemCaptor.capture());
+        then(cartRepository).shouldHaveNoMoreInteractions();
+        assertEquals(1L, response.id());
         assertEquals(totalValue, response.totalValue());
         assertEquals(client, response.client());
-        assertFalse(response.items().isEmpty());
+        assertEquals(1, response.items().size());
     }
 
     @Test
-    void itShouldIncrementQuantityAndTotalValueWhenAddARepeatItemToACar() {
-        BigDecimal totalValue = product.getPrice().multiply(new BigDecimal(cartRequest.quantity()));
+    void shouldIncrementQuantityAndTotalValueWhenAddARepeatItemToACar() {
         Cart savedCart = new Cart(1L, totalValue, client, new ArrayList<>());
+        Cart newCart = new Cart(1L, BigDecimal.ZERO, client, Arrays.asList(item));
 
-        when(cartRepository.findById(1L)).thenReturn(Optional.of(cart));
+        when(cartRepository.findById(anyLong())).thenReturn(Optional.of(newCart));
         when(cartRepository.save(cartCaptor.capture())).thenReturn(savedCart);
         given(cartItemService.productIsAlreadyInTheCart(anyLong(), anyLong())).willReturn(true);
 
         var response = cartService.addItemToCart(cartRequest, 1L);
 
-        verify(cartRepository, times(1)).save(cartCaptor.capture());
-        verify(cartItemService, times(1)).updateCartItemQuantity(cartRequest.quantity(), cartRequest.product().getId(), 1L);
-        assertNotNull(response);
+        then(cartRepository).should().save(cartCaptor.capture());
+        then(cartItemService).should().updateCartItemQuantity(cartRequest.quantity(), cartRequest.product().getId(), 1L);
+        assertEquals(1L, response.id());
+        assertEquals(totalValue, response.totalValue());
         assertEquals(client, response.client());
+        assertEquals(1, response.items().size());
     }
 
     @Test
-    void itShouldIncrementTotalValueAndAddANewItemToCartWhenAddANewItemToCart() {
-        BigDecimal totalValue = product.getPrice().multiply(new BigDecimal(cartRequest.quantity()));
-        Cart savedCart = new Cart(1L, totalValue, client, Arrays.asList(item));
+    void shouldIncrementTotalValueAndAddANewItemToCartWhenAddANewItemToCart() {
+        Cart savedCart = new Cart(1L, totalValue, client, new ArrayList<>());
+        Cart newCart = new Cart(1L, BigDecimal.ZERO, client, new ArrayList<>());
 
-        when(cartRepository.findById(1L)).thenReturn(Optional.of(cart));
+        when(cartRepository.findById(anyLong())).thenReturn(Optional.of(newCart));
         when(cartRepository.save(cartCaptor.capture())).thenReturn(savedCart);
         given(cartItemService.productIsAlreadyInTheCart(anyLong(), anyLong())).willReturn(false);
 
         var response = cartService.addItemToCart(cartRequest, 1L);
 
         then(cartRepository).should().save(cartCaptor.capture());
-        verify(cartItemService, times(1)).save(itemCaptor.capture());
-        assertNotNull(response);
+        then(cartItemService).should().save(itemCaptor.capture());
+        then(cartRepository).shouldHaveNoMoreInteractions();
+        assertEquals(1L, response.id());
+        assertEquals(totalValue, response.totalValue());
         assertEquals(client, response.client());
         assertEquals(1, response.items().size());
     }
 
     @Test
-    void itShouldGetAllCarts() {
-        given(cartRepository.findAll()).willReturn(Collections.singletonList(cart));
+    void shouldGetAllCarts() {
+        given(cartRepository.findAll()).willReturn(List.of(cart));
 
-        var result = cartService.getAllCarts();
+        var response = cartService.getAllCarts();
 
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+        assertEquals(List.of(new CartResponse(cart)), response);
+        assertFalse(response.isEmpty());
     }
 
     @Test
-    void itShouldReturnCartResponseByGetCartById() {
-        when(cartRepository.findById(1L)).thenReturn(Optional.of(cart));
+    void shouldReturnCartResponseByGetCartById() {
+        when(cartRepository.findById(anyLong())).thenReturn(Optional.of(cart));
 
         var response = cartService.getCartById(1L);
 
-        assertNotNull(response);
+        assertEquals(new CartResponse(cart), response);
+        then(cartRepository).should().findById(anyLong());
+        then(cartRepository).shouldHaveNoMoreInteractions();
     }
 
     @Test
-    void itShouldThrownResourceNotFoundExceptionOnTryToGetANonExistingCartById() {
+    void shouldThrownResourceNotFoundExceptionOnTryToGetANonExistingCartById() {
         assertThrows(ResourceNotFoundException.class, () -> cartService.clearCart(anyLong()));
     }
 
     @Test
     void clearCartShouldDeleteCartAndDeleteCartItems() {
-        when(cartRepository.findById(1L)).thenReturn(Optional.of(cart));
+        when(cartRepository.findById(anyLong())).thenReturn(Optional.of(cart));
 
         cartService.clearCart(1L);
 
         verify(cartItemService, times(1)).deleteCartItems(anyLong());
         verify(cartRepository, times(1)).deleteById(anyLong());
+        then(cartRepository).shouldHaveNoMoreInteractions();
     }
 
     @Test
-    void itShouldThrownResourceNotFoundExceptionOnTryToClearANonExistingCart() {
+    void shouldThrownResourceNotFoundExceptionOnTryToClearANonExistingCart() {
         assertThrows(ResourceNotFoundException.class, () -> cartService.clearCart(anyLong()));
     }
 
     @Test
-    void finalizePurchaseSouldClearCartAndCreateANewOrder() {
-        when(cartRepository.findById(1L)).thenReturn(Optional.of(cart));
+    void finalizePurchaseShouldClearCartAndCreateANewOrder() {
+        when(cartRepository.findById(anyLong())).thenReturn(Optional.of(cart));
 
         cartService.finalizePurchase(1L);
 
@@ -170,10 +183,11 @@ class CartServiceTest {
         verify(orderService, times(1)).create(orderCaptor.capture());
         var order = orderCaptor.getValue();
         assertNotNull(order);
+        assertEquals(new Order(cart), order);
     }
 
     @Test
-    void itShouldThrownResourceNotFoundExceptionOnTryFinalizePurchaseOnANonExistingCart() {
+    void shouldThrownResourceNotFoundExceptionOnTryFinalizePurchaseOnANonExistingCart() {
         assertThrows(ResourceNotFoundException.class, () -> cartService.finalizePurchase(anyLong()));
     }
 }
